[gd_scene load_steps=5 format=3 uid="uid://b8x7y2k3m4n5p"]

[ext_resource type="Script" uid="uid://howsnu8wyhmv" path="res://levels/characterCreation/ui/adjectiveCard/AdjectiveCard.gd" id="1_pwma2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwma2"]
bg_color = Color(1, 0.996, 0.98, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2mowf"]
bg_color = Color(0.5875, 0.25, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2car"]
bg_color = Color(0, 0.636773, 0.951387, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="AdjectiveCard" type="PanelContainer"]
offset_right = 320.0
offset_bottom = 161.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pwma2")
script = ExtResource("1_pwma2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
text = "Adjective Name"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "A descriptive word that adds character to your writing."
fit_content = true
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_2mowf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h2car")
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
